--- a/views/emails/email-validation.hbs
+++ b/views/emails/email-validation.hbs
@@ -337,7 +337,7 @@
                                                         <!-- CONTENT-->
                                                         <p>Hi {{firstName}} 👋,</p>
                                                         <p>
-                                                            {{firstName}} , please confirm your email at devlink
+                                                            {{firstName}} , please confirm your email at bidder
                                                             if not
                                                             ignore
                                                             this Email!
@@ -381,7 +381,7 @@
                             <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                                 <tbody>
                                     <tr>
-                                        <td class="content-block"><span class="apple-link">DEVlink Inc, 123 Nowhere
+                                        <td class="content-block"><span class="apple-link">bidder Inc, 123 Nowhere
                                                 Road, San Francisco CA 99999</span><br> Don't like these emails? <a
                                                 href="#">Unsubscribe</a></td>
                                     </tr>
