--- a/views/emails/password-reset.hbs
+++ b/views/emails/password-reset.hbs
@@ -381,7 +381,7 @@
                             <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                                 <tbody>
                                     <tr>
-                                        <td class="content-block"><span class="apple-link">DEVlink Inc, 123 Nowhere
+                                        <td class="content-block"><span class="apple-link">bidder Inc, 123 Nowhere
                                                 Road, San Francisco CA 99999</span><br> Don't like these emails? <a
                                                 href="#">Unsubscribe</a></td>
                                     </tr>
